# chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  TestEnPassant
.github/workflows/: build.yaml
chess/: chess.cpp
chess/model/: Board.cpp  History.cpp  Match.cpp  Player.cpp  history.cpp
chess/model/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  Queen.cpp  Rook.cpp
chess/model/util/: Coordinates.cpp
chess/view/: ConsoleView.cpp
executables/: chess.cpp
include/: Bishop.hpp  Board.hpp  Color.hpp  ConsoleView.hpp  Coordinates.hpp  GameController.hpp  GameState.hpp  History.hpp  King.hpp  Knight.hpp  Match.hpp  Move.hpp  Pawn.hpp  Piece.hpp  PieceFactory.hpp  PieceType.hpp  Player.hpp  Queen.hpp  Rook.hpp
src/: MyClass.cpp  MyClass.hpp  main.cpp
test/: TestCastle  TestCastle.cpp  TestEnPassant.cpp  TestValidateMove_Bishop.cpp  TestValidateMove_King.cpp  TestValidateMove_Knight.cpp  TestValidateMove_Pawn.cpp  TestValidateMove_Queen.cpp  TestValidateMove_Rook.cpp  enPassant.cpp  testezinho.cpp  tests.cpp
